--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,8 @@ html lang="en"
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
+    - if current_user
+    	= render 'layouts/navbar'
     = render 'layouts/alerta'
     .container
     	= yield
