--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,6 @@ html lang="en"
   body
     - if current_user
     	= render 'layouts/navbar'
-    = render 'layouts/alerta'
+    = render 'layouts/alerts'
     .container
     	= yield
