login and logout specs

--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,6 +1,6 @@
 nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-dark
   .container
-    a.navbar-brand href="#{root_path}"  Athletes Den
+    a.navbar-brand href="#{root_path}"  HelpDesk
     button.navbar-toggler aria-controls="navbarNavDropdown" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#navbarNavDropdown" data-bs-toggle="collapse" type="button" 
       span.navbar-toggler-icon
     #navbarNavDropdown.collapse.navbar-collapse
