--- a/app/views/layouts/_alerts.html.slim
+++ b/app/views/layouts/_alerts.html.slim
@@ -3,3 +3,6 @@
     .text-center class="alert alert-#{ key }"
       .container
         = message.class == Array ? message.join('<br>').html_safe : message
+
+javascript:
+  $('#alert').fadeOut(3000);
