--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,4 +1,4 @@
-nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-dark
+nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
   .container
     a.navbar-brand href="#{root_path}"  HelpDesk
     button.navbar-toggler aria-controls="navbarNavDropdown" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#navbarNavDropdown" data-bs-toggle="collapse" type="button" 
