--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,6 @@
-<div class="form-group">
+<%
+=begin%>
+ <div class="form-group">
   <%- if controller_name != 'sessions' %>
     <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
   <% end -%>
@@ -24,4 +26,6 @@
       <%= link_to t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider)), omniauth_authorize_path(resource_name, provider) %><br />
     <% end -%>
   <% end -%>
-</div>
+</div> 
+<%
+=end%>
