--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -10,8 +10,11 @@ nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
         - unless current_user
           li.nav-item
             = link_to  "Sign up", new_user_registration_path, class: 'nav-link'
-          li.nav-item.dropdown.float-right
+          li.nav-item
               = link_to  "Sign in", new_user_session_path, class: 'nav-link'
+          li.nav-item
+            = link_to 'Forget your password?', new_password_path(:user), class: 'nav-link'
+
         - else  
           li.nav-item.dropdown.float-right
             = link_to  "Sign out", destroy_user_session_path, method: :delete, class: 'nav-link'
