--- a/app/views/layouts/_alerts.html.slim
+++ b/app/views/layouts/_alerts.html.slim
@@ -5,4 +5,4 @@
         = message.class == Array ? message.join('<br>').html_safe : message
 
 javascript:
-  $('#alert').fadeOut(3000);
+  $('#alerts').fadeOut(6000);
