small layout change

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,5 +13,5 @@ html lang="en"
   body
     = render 'layouts/navbar'
     = render 'layouts/alerts'
-    .container
+    .container.mt-2
     	= yield
