--- a/app/assets/stylesheets/login_box.scss
+++ b/app/assets/stylesheets/login_box.scss
@@ -12,8 +12,8 @@
   padding: 20px;
 }
 
-#login-box {
-  & input[type=email], & input[type=password], & input[type='text'] {
+.dark-mode {
+  & input[type=email], & input[type=password], & input[type='text'], select {
     background-color: #222225 !important;
     @extend .text-light;
     margin: 8px;
@@ -28,8 +28,9 @@
     border-bottom: 1px solid;
     border-radius: 4px;
     -webkit-text-fill-color:#757575;
+    height: 40px;
   }
-  & input[type=email]:focus, & input[type=password]:focus, & input[type='text']:focus,
+  & input[type=email]:focus, & input[type=password]:focus, & input[type='text']:focus, select:focus, select:focus-visible,
   & input[type=email]:focus-visible, & input[type=password]:focus-visible, & input[type='text']:focus-visible {
     outline: none !important;
     @extend .text-light;
