--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,4 +1,4 @@
-#login-box.small-centred-window style='max-width:100% !important;'
+.dark-mode.small-centred-window style='max-width:100% !important;'
   h1= t('.change_your_password')
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
     = bootstrap_devise_error_messages!
