--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,4 +1,4 @@
-#login-box.small-centred-window
+.dark-mode.small-centred-window
   h2= t('.sign_up')
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = bootstrap_devise_error_messages!
