--- a/app/views/service_requests/index.html.slim
+++ b/app/views/service_requests/index.html.slim
@@ -1,36 +1,23 @@
-- model_class = ServiceRequest
 .page-header
-  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
-table.table.table-striped
-  thead
-    tr
-      th= model_class.human_attribute_name(:id)
-      th= model_class.human_attribute_name(:name)
-      th= model_class.human_attribute_name(:request_status_id)
-      th= model_class.human_attribute_name(:user_id)
-      th= model_class.human_attribute_name(:location_id)
-      th= model_class.human_attribute_name(:closed_at)
-      th= model_class.human_attribute_name(:important)
-      th= model_class.human_attribute_name(:raport)
-      th= model_class.human_attribute_name(:department_id)
-      th= model_class.human_attribute_name(:created_at)
-      th=t '.actions', :default => t("helpers.actions")
-  tbody
-    - @service_requests.each do |service_request|
-      tr
-        td= link_to service_request.id, service_request_path(service_request)
-        td= service_request.name
-        td= service_request.request_status_id
-        td= service_request.user_id
-        td= service_request.location_id
-        td= service_request.closed_at
-        td= service_request.important
-        td= service_request.raport
-        td= service_request.department_id
-        td= service_request.created_at
-        td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_service_request_path(service_request), :class => 'btn btn-default btn-xs'
-          '
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), service_request_path(service_request), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+  h1 = t '.title'
 
-= link_to t('.new', :default => t("helpers.links.new")), new_service_request_path, :class => 'btn btn-primary'
+= render 'service_requests/form'
+
+br
+.d-none.d-md-block
+  .row
+    .col-sm-2.d-flex.justify-content-center
+      | Created at
+    .col-sm-2.d-flex.justify-content-center
+      | Owner
+    .col-sm-2.d-flex.justify-content-center
+      | Location
+    .col-sm-2.d-flex.justify-content-center
+      | Status
+    .col-sm-2.d-flex.justify-content-center
+      | Destination
+    .col-sm-2.d-flex.justify-content-center
+
+
+
+= render @service_requests
