--- a/app/assets/stylesheets/login_box.scss
+++ b/app/assets/stylesheets/login_box.scss
@@ -13,7 +13,7 @@
 }
 
 .dark-mode {
-  & input[type=email], & input[type=password], & input[type='text'], select {
+  & input[type=email], & input[type=password], & input[type='text'], select, textarea {
     background-color: #222225 !important;
     @extend .text-light;
     margin: 8px;
@@ -30,6 +30,12 @@
     -webkit-text-fill-color:#757575;
     height: 40px;
   }
+
+  & textarea {
+    max-width: unset !important;
+    height: 88px !important;
+  }
+
   & input[type=email]:focus, & input[type=password]:focus, & input[type='text']:focus, select:focus, select:focus-visible,
   & input[type=email]:focus-visible, & input[type=password]:focus-visible, & input[type='text']:focus-visible {
     outline: none !important;
