--- a/app/views/service_requests/_form.html.slim
+++ b/app/views/service_requests/_form.html.slim
@@ -1,15 +1,15 @@
 = simple_form_for @service_request, html: { class: "form-horizontal" } do |f|
   .row.dark-mode
-    .col-sm-3
-      = f.input :name, as: :string, placeholder: 'Your request', label: false
+    .col-sm-6
+      = f.input :name, placeholder: 'New request', label: false, input_html: { rows: 2, cols: 2}
     .col-sm-3
       = f.hidden_field :request_status_id, value: RequestStatus.first.id
       = f.hidden_field :user_id, value: current_user.id
       = f.association :location, label: false, include_blank: 'Location'
-    .col-sm-3
-      = f.association :department, collection: Department.technicians, label: 'Destination', label: false, include_blank: 'Destination'
+      = f.association :department, collection: Department.technicians, label: false, include_blank: 'Destination'
     .col-sm-3.row.form-check.d-flex.justify-content-center style='align-items:center;'
-      .col-6.d-flex.justify-content-center style='align-items:center;'
         = f.input :important, class:'form-check-input'
-      .col-6.d-flex.justify-content-end style='align-items:center;'
-        = f.button :submit, 'Add', class: 'btn-primary'
+        .btn-group
+          = f.button :submit, 'Add', class: 'btn-success btn btn-sm'
+          - unless @service_request.new_record?
+            = link_to 'Cancel', @service_request, class: 'btn btn-warning btn-sm'
