--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -16,7 +16,7 @@ nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
           li.nav-item
             = link_to 'Service Requests', service_requests_path, class: 'nav-link'
           li.nav-item
-            = link_to 'Profile', edit_user_registration_path, class: 'nav-link'
+            = link_to "Profile(#{current_user.full_name})", edit_user_registration_path, class: 'nav-link'
           li.nav-item
             = link_to  "Sign out", destroy_user_session_path, method: :delete, class: 'nav-link'
             
