--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -2,8 +2,12 @@
 
 .table-row-top {
   border-radius: 8px 8px 0 0;
+  border:1px solid #303030;
+  border-bottom: none;
 }
 
 .table-row-bottom {
   border-radius: 0 0 8px 8px;
+  border:1px solid #303030;
+  border-top: none;
 }
