--- a/app/views/service_requests/_service_request.html.slim
+++ b/app/views/service_requests/_service_request.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag service_request do
-  .row.pt-2.table-row-top.text-center.mt-2 style="color: #{service_request.request_status.color};background-color:#{service_request.request_status.background};"
+  .row.pt-2.table-row-top.text-center.mt-2 style="#{service_request.colors}" data-controller='requests' data-requests-url-value="#{service_request_btn_path(service_request_id: service_request.id)}"
     .col-sm-2.my-table-centered
       .d-block.d-sm-none.text-muted
         | Created
@@ -27,15 +27,8 @@
         | destination
       .mx-1
       = service_request.department.name
-    .col-sm-2.my-table-centered
-      .btn-group
-        / - if can? :assign_technician, service_request
-        /   = link_to t('.assign'), service_request_assign_technician_path(service_request), class: 'btn btn-light btn-sm me-2'
-        / - if can? :edit, service_request
-        /   = link_to t('.edit'), edit_service_request_path(service_request), class: 'btn btn-warning btn-sm me-2'
-        / - if can? :delete, service_request
-        /   = link_to t('.destroy'), service_request_path(service_request), method: :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, class: 'btn btn-sm btn-danger'
-  .row.pt-2.table-row-bottom style="color: #{service_request.request_status.color};background-color:#{service_request.request_status.background};"
+    .col-sm-2.my-table-centered id="sr#{service_request.id}"
+  .row.pt-2.table-row-bottom style="#{service_request.colors}"
     .col-sm-12.my-table-centered.p-2 style='border-top:1px solid #303030'
       .text-muted
         = service_request.name
