--- a/app/views/service_requests/_buttons.html.slim
+++ b/app/views/service_requests/_buttons.html.slim
@@ -1,6 +1,8 @@
 - if can? :assign_technician, @service_request
-  = link_to t('.assign'), service_request_assign_technician_path(@service_request), class: 'btn btn-primary btn-sm', id: 'assign'
+  = link_to 'take', service_request_assign_technician_path(@service_request), class: 'btn btn-primary btn-sm m-1', id: 'assign'
 - if can? :edit, @service_request
-  = link_to t('.edit'), edit_service_request_path(service_request), class: 'btn btn-warning btn-sm', id: 'edit'
+  = link_to edit_service_request_path(service_request), class: 'btn btn-warning btn-sm m-1', id: 'edit' do
+    i class="bi bi-pencil-square"
 - if can? :delete, @service_request
-  = link_to t('.destroy'), service_request_path(service_request), method: :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, class: 'btn btn-sm btn-danger', id: 'delete'
+  = link_to service_request_path(service_request), method: :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, class: 'btn btn-sm btn-danger m-1', id: 'delete' do
+    i class="bi bi-trash" 
