basic home page

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,1 +1,3 @@
-h1 Wellcome to helpdesk
+h1.my-5 Wellcome to helpdesk
+h6 Your own helper in getting help from technicians
+h6 Everytime we you need an assistance from IT, Electric department or other, just place a service request!
