Home page with instructions

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,3 +1,10 @@
-h1.my-5 Wellcome to helpdesk
+h1.my-5 Wellcome to the HelpDeskApp
 h6 Your own helper in getting help from technicians
-h6 Everytime we you need an assistance from IT, Electric department or other, just place a service request!
+h6 Everytime you need an assistance from IT, Electric department or other, just place a service request!
+br
+| To get you account contact the administrator. He will use your e-mail adress to create an account for you. 
+| You will have to confitm that adres using link in confirmation e-mail that you will get after your account will be created. 
+| You will also receive e-mail notification conserning requests that you will make.
+br
+| We encourage you to enable two factor authentications for your account. Just click Profile link on the navbar in the top of this page and click "Enable" 
+| You will have to install Google Authenticaton on your phone and scan the QR code with it. Everytime you will sign in, you will have to rewrite a code from this application.
