--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -13,6 +13,9 @@ nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
         - else  
           li.nav-item
             = link_to 'Service Requests', service_requests_path, class: 'nav-link'
+          - if current_user.admin?
+            li.nav-item
+              = link_to 'Admin', admin_root_path, class: 'nav-link'
           li.nav-item
             = link_to "Profile(#{current_user.full_name})", edit_user_registration_path, class: 'nav-link'
           li.nav-item
