--- a/app/views/service_requests/_service_request.html.slim
+++ b/app/views/service_requests/_service_request.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag service_request do
-  .row.pt-2.table-row-top.text-center.mt-2 style="#{service_request.colors}" data-controller='requests' data-requests-url-value="#{service_request_btn_path(service_request_id: service_request.id)}"
+  .row.pt-2.px-2.table-row-top.text-center.mt-2 data-controller='requests' style="background-color:#{service_request.background};" data-requests-url-value="#{service_request_btn_path(service_request_id: service_request.id)}"
     .col-sm-2.my-table-centered
       .d-block.d-sm-none.text-muted
         | Created
@@ -20,22 +20,26 @@
     .col-sm-2.my-table-centered
       .d-block.d-sm-none.text-muted
         | status
-      .mx-1
+      .mx-1 class="#{service_request.color}"
         = service_request.status
-        br
-        small.text-muted
-          small #{service_request.technicians_initials}
+        / br
+        / small.text-muted
+        /   small #{service_request.technicians_initials}
     .col-sm-2.my-table-centered
       .d-block.d-sm-none.text-muted
         | destination
       .mx-1
       = service_request.department.name
     .col-sm-2.my-table-centered id="sr#{service_request.id}"
-  .row.pt-2.px-3.table-row-bottom.restrict_text.text-to-reveal style="#{service_request.colors}"
-    .col-sm-12.p-2.text-start style='border-top:1px solid #303030'
-      .text-muted
-        | description: #{service_request.name}
-    - if !service_request.raport.blank?
-      .col-sm-12.p-2.text-start
+  .row.pt-2.px-3.table-row-bottom.restrict_text.text-to-reveal  style="background-color:#{service_request.background};"
+    - if service_request.raport.blank?
+      .col-sm-12.p-2.text-start style='border-top:1px solid #303030'
+        .text-muted
+          = simple_format(service_request.name)
+    - else
+      .col-sm-6.p-2.text-start style='border-top:1px solid #303030'
+        .text-muted
+          = simple_format(service_request.name)
+      .col-sm-6.p-2.text-start style='border-top:1px solid #303030'
         .text-muted.text-start
-          | raport: #{simple_format(service_request.raport)}
+          = simple_format(service_request.raport)
