--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -21,9 +21,7 @@ nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
           li.nav-item
             = link_to  "Sign out", destroy_user_session_path, method: :delete, class: 'nav-link'
             
-/ TODO: raport na pół z opisem
-  ostatnie requesty na home
-  nowi użytwkonicy na home
+/ TODO: 
   statystyki na home
   badge na statusy
   responsywnie marginesy dla sr
@@ -36,3 +34,4 @@ nav#navbar-main.navbar.navbar-expand-lg.navbar-dark.bg-warm-dark
   wizyty
   notiyfikacje mailem
   na githubie screeny dodać
+  specs
