--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -29,3 +29,6 @@ br
       tr
         td.p-0 How many per day
         td.p-0 = ServiceRequest.how_many_per_work_day
+      tr 
+        td.p-0 Todays requests
+        td.p-0 = ServiceRequest.todays_requests
