notifications on request update

--- a/app/views/notification_mailer/new_service_request.html.slim
+++ b/app/views/notification_mailer/new_service_request.html.slim
@@ -4,5 +4,5 @@ p.mb-0 Autor: #{@request.owner}
 p.m-0 Lokalizacja: #{@request.location.name}
 p.m-0 Temat: #{@request.name}
 br
-p.m-0 = link_to 'Link to zgłoszenia', @link
+p.m-0 = link_to 'request link', @link
 p.m-0 Utworzono:  #{@request.created_at}
